<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alvin.w3_hw_01.MainActivity">

    <TextView
        android:id="@+id/tv_userName"
        android:text="@string/lbl_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_userLocation"
        android:text="@string/lbl_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_userEmail"
        android:text="@string/lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_userPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_save"
        android:text="@string/lbl_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_searchInput"
        android:hint="@string/lbl_et_search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_search"
        android:onClick="toSearchActivity"
        android:text="@string/lbl_btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_showAll"
        android:text="@string/lbl_show_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_showAllUsers"
        android:text="@string/lbl_all_saved_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
