<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context="com.example.alvin.w3_hw_01.SearchActivity">

    <TextView
        android:id="@+id/tv_search_login"
        android:text="@string/lbl_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_name"
        android:text="@string/lbl_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_gender"
        android:text="@string/lbl_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_dob"
        android:text="@string/lbl_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_phone"
        android:text="@string/lbl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_cell"
        android:text="@string/lbl_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_email"
        android:text="@string/lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_search_location"
        android:text="@string/lbl_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_search_pic"
        android:padding="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
